refactor: cleaning up to optimise and fix bugs